--- a/admin/login.html
+++ b/admin/login.html
@@ -2,10 +2,11 @@
 <input id="email" placeholder="Email">
 <input id="password" type="password" placeholder="Password">
 <button onclick="login()">Login</button>
+<a href="#" onclick="forgotPassword()">Forgot Password?</a>
 
 <script type="module">
 import { auth } from "../js/firebase.js";
-import { signInWithEmailAndPassword } from
+import { signInWithEmailAndPassword, sendPasswordResetEmail } from
 "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
 function login() {
@@ -15,6 +16,18 @@ function login() {
   .catch(err => alert(err.message));
 }
 
+function forgotPassword() {
+  const email = document.getElementById('email').value.trim();
+  if (!email) {
+    alert('Please enter your email address first.');
+    return;
+  }
+  sendPasswordResetEmail(auth, email)
+    .then(() => alert('Password reset email sent. Check your inbox.'))
+    .catch(err => alert('Error: ' + err.message));
+}
+
 // expose to global scope so inline onclick can call it
 window.login = login;
+window.forgotPassword = forgotPassword;
 </script>
