--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -14,7 +14,7 @@
     <a href="orders.html">Orders</a> |
     <a href="analytics.html">Analytics</a> |
     <a href="manage-admins.html">Manage Admins</a> |
-    <a href="#" id="logout">Logout</a>
+    <a href="/public/index.html" id="logout">Logout</a>
   </nav>
 
   <section id="addProductSection">
