--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Saree & Dhoti Store</title>
   <link rel="stylesheet" href="../css/style.css">
+  <script type="module" src="/js/banner.js"></script>
 </head>
 <body>
   <!-- Header -->
@@ -22,6 +23,13 @@
       <a href="#" data-category="kids">Kids</a>
     </nav>
   </header>
+
+  <!-- 🔥 Banner Section -->
+<section id="banner">
+  <div class="slide" id="bannerContent">
+    Loading offers...
+  </div>
+</section>
 
   <main>
     <div class="container">
