--- a/public/my-account.html
+++ b/public/my-account.html
@@ -1,3 +1,28 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Saree & Dhoti Store</title>
+  <link rel="stylesheet" href="../css/style.css">
+</head>
+<body>
+  <!-- Header -->
+  <header class="header">
+    <div class="header-top">
+      <a href="index.html" class="logo-link"><h1 class="logo">Saree & Dhoti Store</h1></a>
+      <div class="header-actions">
+        <a href="cart.html" class="cart-link">🛒 Cart</a>
+        <a href="login.html">My Account</a>
+      </div>
+    </div>
+    <nav class="navbar">
+      <a href="#" data-category="men">Men</a>
+      <a href="#" data-category="womens">Womens</a>
+      <a href="#" data-category="kids">Kids</a>
+    </nav>
+  </header>
+
 <h2>My Account</h2>
 <a href="my-orders.html">My Orders</a>
 
@@ -22,3 +47,86 @@ auth.onAuthStateChanged(user => {
   }
 });
 </script>
+
+<!-- Footer -->
+  <footer class="footer">
+    <div class="footer-top">
+      <div class="footer-logo">
+        <h2>Saree & Dhoti</h2>
+        <p class="trust-badge">⭐ Trusted by thousands of customers</p>
+      </div>
+      <div class="footer-columns">
+        <div class="footer-column">
+          <h4>Company</h4>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Our Story</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Sitemap</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h4>Shop</h4>
+          <ul>
+            <li><a href="index.html">All Products</a></li>
+            <li><a href="#">Men's Collection</a></li>
+            <li><a href="#">Women's Collection</a></li>
+            <li><a href="#">Kids Collection</a></li>
+            <li><a href="#">New Arrivals</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h4>Customer Service</h4>
+          <ul>
+            <li><a href="track.html">Track Order</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Support Hub</a></li>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Returns</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h4>Connect With Us</h4>
+          <div class="social-links">
+            <a href="https://facebook.com" target="_blank">📘 Facebook</a>
+            <a href="https://instagram.com" target="_blank">📷 Instagram</a>
+            <a href="https://twitter.com" target="_blank">𝕏 Twitter</a>
+            <a href="https://wa.me/1234567890" target="_blank">💬 WhatsApp</a>
+          </div>
+          <div class="contact-info">
+            <p><strong>Email:</strong> <a href="mailto:support@example.com">support@example.com</a></p>
+            <p><strong>Phone:</strong> <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-divider"></div>
+    <div class="footer-badges">
+      <div class="badge">
+        <div class="badge-icon">🚚</div>
+        <div class="badge-text"><strong>Fast Shipping</strong><br>Worldwide Delivery</div>
+      </div>
+      <div class="badge">
+        <div class="badge-icon">🔒</div>
+        <div class="badge-text"><strong>100% Secure</strong><br>Safe Checkout</div>
+      </div>
+      <div class="badge">
+        <div class="badge-icon">🤝</div>
+        <div class="badge-text"><strong>24/7 Support</strong><br>Customer Care</div>
+      </div>
+      <div class="badge">
+        <div class="badge-icon">⭐</div>
+        <div class="badge-text"><strong>Premium Quality</strong><br>Authentic Products</div>
+      </div>
+    </div>
+    <div class="footer-divider"></div>
+    <div class="footer-bottom">
+      <p>&copy; 2026 Saree & Dhoti Store. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script type="module" src="../js/products.js"></script>
+  <script src="../js/cart.js"></script>
+</body>
+</html> 
