--- a/public/login.html
+++ b/public/login.html
@@ -1,3 +1,23 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Saree & Dhoti Store</title>
+  <link rel="stylesheet" href="../css/style.css">
+</head>
+<body>
+  <!-- Header -->
+  <header class="header">
+    <div class="header-top">
+      <a href="index.html" class="logo-link"><h1 class="logo">Saree & Dhoti Store</h1></a>
+      <div class="header-actions">
+        <a href="cart.html" class="cart-link">🛒 Cart</a>
+        <a href="login.html">My Account</a>
+      </div>
+    </div>
+  </header>
+
 <h2>Login / Sign Up</h2>
 
 <input id="email" placeholder="Email">
