--- a/admin/manage-admins.html
+++ b/admin/manage-admins.html
@@ -8,6 +8,14 @@
 </head>
 <body>
   <h2>Manage Admins</h2>
+  <nav>
+    <a href="dashboard.html">Home</a> |
+    <a href="products.html">Products</a> |
+    <a href="orders.html">Orders</a> |
+    <a href="analytics.html">Analytics</a> |
+    <a href="manage-admins.html">Manage Admins</a> |
+    <a href="/public/index.html" id="logout">Logout</a>
+  </nav>
   <input id="email" placeholder="Admin Email">
   <select id="role">
     <option value="owner">Owner</option>
