--- a/admin/analytics.html
+++ b/admin/analytics.html
@@ -8,6 +8,14 @@
 </head>
 <body>
   <h2>📊 Business Analytics</h2>
+  <nav>
+    <a href="dashboard.html">Home</a> |
+    <a href="products.html">Products</a> |
+    <a href="orders.html">Orders</a> |
+    <a href="analytics.html">Analytics</a> |
+    <a href="manage-admins.html">Manage Admins</a> |
+    <a href="/public/index.html" id="logout">Logout</a>
+  </nav>
   <div id="stats">
     <p>Total Revenue: ₹<span id="revenue">0</span></p>
     <p>Total Orders: <span id="ordersCount">0</span></p>
