--- a/admin/orders.html
+++ b/admin/orders.html
@@ -8,6 +8,14 @@
 </head>
 <body>
   <h2>Orders</h2>
+    <nav>
+    <a href="dashboard.html">Home</a> |
+    <a href="products.html">Products</a> |
+    <a href="orders.html">Orders</a> |
+    <a href="analytics.html">Analytics</a> |
+    <a href="manage-admins.html">Manage Admins</a> |
+    <a href="/public/index.html" id="logout">Logout</a>
+  </nav>
   <div id="orders"></div>
 
   <script type="module" src="../admin-js/admin-orders.js"></script>
