--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -16,6 +16,7 @@
     <a href="orders.html">Orders</a> |
     <a href="analytics.html">Analytics</a> |
     <a href="manage-admins.html">Manage Admins</a> |
+    <a href="customers.html">👥 View Customers</a> |
     <a href="/public/index.html" id="logout">Logout</a>
   </nav>
 
