--- a/admin/customers.html
+++ b/admin/customers.html
@@ -1,4 +1,24 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Admin Dashboard</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <script type="module" src="../admin-js/dashboard-summary.js"></script>
+
+</head>
 <h2>Customers</h2>
+  <nav>
+    <a href="dashboard.html">Home</a> |
+    <a href="products.html">Products</a> |
+    <a href="orders.html">Orders</a> |
+    <a href="analytics.html">Analytics</a> |
+    <a href="manage-admins.html">Manage Admins</a> |
+    <a href="customers.html">View Customers</a> |
+    <a href="customer-orders.html">Customer Orders</a> |
+    <a href="/public/index.html" id="logout">Logout</a>
+  </nav>
 
 <table border="1" cellpadding="8">
   <thead>
