--- a/admin/products.html
+++ b/admin/products.html
@@ -14,6 +14,8 @@
     <a href="orders.html">Orders</a> |
     <a href="analytics.html">Analytics</a> |
     <a href="manage-admins.html">Manage Admins</a> |
+    <a href="customers.html">View Customers</a> |
+    <a href="customer-orders.html">Customer Orders</a> |
     <a href="/public/index.html" id="logout">Logout</a>
   </nav>
 <section id="addProductSection">
