--- a/public/checkout.html
+++ b/public/checkout.html
@@ -3,24 +3,26 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Checkout</title>
+  <title>Store Name</title>
   <link rel="stylesheet" href="../css/style.css">
+  <script type="module" src="/js/banner.js"></script>
 </head>
 <body>
   <!-- Header -->
   <header class="header">
     <div class="header-top">
-      <a href="index.html" class="logo-link"><h1 class="logo">Saree & Dhoti Store</h1></a>
+      <a href="index.html" class="logo-link"><h1 class="logo">Store Name</h1></a>
       <div class="header-actions">
         <a href="cart.html" class="cart-link">🛒 Cart</a>
-        <a href="../admin/login.html" class="admin-link">Admin</a>
+        <a href="login.html">Login</a>
       </div>
     </div>
     <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="#" data-category="men">Men</a>
-      <a href="#" data-category="womens">Womens</a>
-      <a href="#" data-category="kids">Kids</a>
+      <a href="newarrivals.html" data-category="new">New Arrivals</a>
+      <a href="mens.html" data-category="men">Mens Fashion</a>
+      <a href="womens.html" data-category="womens">Womens Fashion</a>
+      <a href="kids.html" data-category="kids">Kids Fashion</a>
+      <a href="fancyitems.html" data-category="fancy">Fancy Items</a>
     </nav>
   </header>
 
@@ -45,7 +47,7 @@
   <footer class="footer">
     <div class="footer-top">
       <div class="footer-logo">
-        <h2>Saree & Dhoti</h2>
+        <h2>Store Name</h2>
         <p class="trust-badge">⭐ Trusted by thousands of customers</p>
       </div>
       <div class="footer-columns">
@@ -63,10 +65,10 @@
           <h4>Shop</h4>
           <ul>
             <li><a href="index.html">All Products</a></li>
-            <li><a href="#">Men's Collection</a></li>
-            <li><a href="#">Women's Collection</a></li>
-            <li><a href="#">Kids Collection</a></li>
-            <li><a href="#">New Arrivals</a></li>
+            <li><a href="mens.html">Men's Collection</a></li>
+            <li><a href="womens.html">Women's Collection</a></li>
+            <li><a href="kids.html">Kids Collection</a></li>
+            <li><a href="newarrivals.html">New Arrivals</a></li>
           </ul>
         </div>
         <div class="footer-column">
@@ -115,7 +117,7 @@
     </div>
     <div class="footer-divider"></div>
     <div class="footer-bottom">
-      <p>&copy; 2026 Saree & Dhoti Store. All rights reserved.</p>
+      <p>&copy; 2026 Store Name. All rights reserved.</p>
     </div>
   </footer>
 
