--- a/public/login.html
+++ b/public/login.html
@@ -10,10 +10,8 @@
   <!-- Header -->
   <header class="header">
     <div class="header-top">
-      <a href="index.html" class="logo-link"><h1 class="logo">Saree & Dhoti Store</h1></a>
+      <a href="index.html" class="logo-link"><h1 class="logo">Store Name</h1></a>
       <div class="header-actions">
-        <a href="cart.html" class="cart-link">🛒 Cart</a>
-        <a href="login.html">My Account</a>
       </div>
     </div>
   </header>
