--- a/public/mens.html
+++ b/public/mens.html
@@ -18,26 +18,19 @@
       </div>
     </div>
     <nav class="navbar">
-      <a href="newarrivals.html" data-category="new">New Arrivals</a>
+    <a href="newarrivals.html" data-category="new">New Arrivals</a>
       <a href="mens.html" data-category="men">Mens Fashion</a>
       <a href="womens.html" data-category="womens">Womens Fashion</a>
       <a href="kids.html" data-category="kids">Kids Fashion</a>
       <a href="fancyitems.html" data-category="fancy">Fancy Items</a>
-    
     </nav>
   </header>
 
-  <!-- 🔥 Banner Section -->
-<section id="banner">
-  <div class="slide" id="bannerContent">
-    Loading offers...
-  </div>
-</section>
 
-  <main>
+    <main>
     <div class="container">
-      <h1>Products</h1>
-      <div id="products"></div>
+      <h1>Mens Collections</h1>
+      <div id="mens"></div>
     </div>
   </main>
 
