--- a/public/womens.html
+++ b/public/womens.html
@@ -23,21 +23,14 @@
       <a href="womens.html" data-category="womens">Womens Fashion</a>
       <a href="kids.html" data-category="kids">Kids Fashion</a>
       <a href="fancyitems.html" data-category="fancy">Fancy Items</a>
-    
     </nav>
   </header>
 
-  <!-- 🔥 Banner Section -->
-<section id="banner">
-  <div class="slide" id="bannerContent">
-    Loading offers...
-  </div>
-</section>
 
-  <main>
+    <main>
     <div class="container">
-      <h1>Products</h1>
-      <div id="products"></div>
+      <h1>Womens Collections</h1>
+      <div id="womens"></div>
     </div>
   </main>
 
