--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
            <a href="index.html" class="logo-link">
       <img src="logo.png" alt="Store Logo" class="logo-img">
       <div class="brand-text">
-        <span class="brand-tagline">Fashion Atrract's</span>
+        <span class="brand-tagline">Fashion Attract's</span>
       </div>
     </a>
 
@@ -91,11 +91,11 @@
             <a href="https://facebook.com" target="_blank">📘 Facebook</a>
             <a href="https://instagram.com" target="_blank">📷 Instagram</a>
             <a href="https://twitter.com" target="_blank">𝕏 Twitter</a>
-            <a href="https://wa.me/1234567890" target="_blank">💬 WhatsApp</a>
+            <a href="https://wa.me/919944499333" target="_blank">💬 WhatsApp</a>
           </div>
           <div class="contact-info">
-            <p><strong>Email:</strong> <a href="mailto:support@example.com">support@example.com</a></p>
-            <p><strong>Phone:</strong> <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+            <p><strong>Email:</strong> <a href="mailto:vogantfashions@gmail.com">vogantfashions@gmail.com</a></p>
+            <p><strong>Phone:</strong> <a href="tel:+919944499333">+91 99444 99333</a></p>
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
     </div>
     <div class="footer-divider"></div>
     <div class="footer-bottom">
-      <p>&copy; 2026 Store Name. All rights reserved.</p>
+      <p>&copy; 2026 Vogant Fashions. All rights reserved.</p>
     </div>
   </footer>
 
