--- a/public/kids.html
+++ b/public/kids.html
@@ -5,18 +5,17 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Vogant Fashions/Kids</title>
   <link rel="stylesheet" href="../css/style.css">
-  <script type="module" src="/js/banner.js"></script>
 </head>
 <body>
   <!-- Header -->
   <header class="header">
     <div class="header-top">
       <a href="index.html" class="logo-link">
-      <img src="logo.png" alt="Store Logo" class="logo-img">
-      <div class="brand-text">
-        <span class="brand-tagline">Fashion Atrract's</span>
-      </div>
-    </a>
+        <img src="logo.png" alt="Store Logo" class="logo-img">
+        <div class="brand-text">
+          <span class="brand-tagline">Fashion Attract's</span>
+        </div>
+      </a>
       <div class="header-actions">
         <a href="cart.html" class="cart-link">🛒 Cart</a>
         <a href="login.html">Login</a>
@@ -31,11 +30,10 @@
     </nav>
   </header>
 
-
-    <main>
+  <main>
     <div class="container">
       <h1>Kids Collections</h1>
-      <div id="kids"></div>
+      <div id="products"></div>
     </div>
   </main>
 
@@ -83,11 +81,11 @@
             <a href="https://facebook.com" target="_blank">📘 Facebook</a>
             <a href="https://instagram.com" target="_blank">📷 Instagram</a>
             <a href="https://twitter.com" target="_blank">𝕏 Twitter</a>
-            <a href="https://wa.me/1234567890" target="_blank">💬 WhatsApp</a>
+            <a href="https://wa.me/919944499333" target="_blank">💬 WhatsApp</a>
           </div>
           <div class="contact-info">
-            <p><strong>Email:</strong> <a href="mailto:support@example.com">support@example.com</a></p>
-            <p><strong>Phone:</strong> <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+            <p><strong>Email:</strong> <a href="mailto:vogantfashions@gmail.com">vogantfashions@gmail.com</a></p>
+            <p><strong>Phone:</strong> <a href="tel:+919944499333">+91 99444 99333</a></p>
           </div>
         </div>
       </div>
@@ -113,11 +111,12 @@
     </div>
     <div class="footer-divider"></div>
     <div class="footer-bottom">
-      <p>&copy; 2026 Store Name. All rights reserved.</p>
+      <p>&copy; 2026 Vogant Fashions. All rights reserved.</p>
     </div>
   </footer>
 
   <script type="module" src="../js/products.js"></script>
   <script src="../js/cart.js"></script>
 </body>
-</html> 
+</html>
+
