--- a/public/checkout.html
+++ b/public/checkout.html
@@ -34,16 +34,16 @@
   <main>
     <div class="container">
       <h1>Checkout</h1>
-      <form id="checkoutForm">
+      <form id="checkoutForm" onsubmit="event.preventDefault(); payNow();">
         <label>Name:</label>
         <input type="text" id="name" required>
         <label>Phone:</label>
-        <input type="tel" id="phone" required>
+        <input type="tel" id="phone" required placeholder="10-digit mobile number">
         <label>Email:</label>
         <input type="email" id="email" required>
         <label>Address:</label>
         <textarea id="address" required></textarea>
-        <button type="submit">Pay with Razorpay</button>
+        <button type="submit" class="btn-checkout">Pay with Razorpay</button>
       </form>
     </div>
   </main>
