--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Saree & Dhoti Store</title>
+  <title>Vogant Fashions/Login</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -11,27 +11,30 @@
   <header class="header">
     <div class="header-top">
       <a href="index.html" class="logo-link">
-      <img src="logo.png" alt="Store Logo" class="logo-img">
-      <div class="brand-text">
-        <span class="brand-tagline">Fashion Atrract's</span>
-      </div>
-    </a>
+        <img src="logo.png" alt="Store Logo" class="logo-img">
+        <div class="brand-text">
+          <span class="brand-tagline">Fashion Attract's</span>
+        </div>
+      </a>
       <div class="header-actions">
       </div>
     </div>
   </header>
 
-<h2>Login / Sign Up</h2>
+  <div class="container">
+    <h2>Login / Sign Up</h2>
+    <div class="card" style="max-width: 400px; margin: 0 auto;">
+      <input id="email" placeholder="Email" type="email">
+      <input id="password" type="password" placeholder="Password">
+      <button onclick="login()">Login</button>
+      <button onclick="signup()" class="secondary">Sign Up</button>
+      <br><br>
+      <a href="#" onclick="resetPassword()">Forgot Password?</a>
+      <p id="msg"></p>
+    </div>
+  </div>
 
-<input id="email" placeholder="Email">
-<input id="password" type="password">
+  <script type="module" src="../js/auth.js"></script>
+</body>
+</html>
 
-<button onclick="login()">Login</button>
-<button onclick="signup()">Sign Up</button>
-<br><br>
-<a href="#" onclick="resetPassword()">Forgot Password?</a>
-
-
-<p id="msg"></p>
-
-<script type="module" src="../js/auth.js"></script>
