--- a/public/my-account.html
+++ b/public/my-account.html
@@ -3,20 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Vogant Fashions/Login</title>
+  <title>Vogant Fashions/My Account</title>
   <link rel="stylesheet" href="../css/style.css">
-  <script type="module" src="/js/banner.js"></script>
 </head>
 <body>
   <!-- Header -->
   <header class="header">
     <div class="header-top">
       <a href="index.html" class="logo-link">
-      <img src="logo.png" alt="Store Logo" class="logo-img">
-      <div class="brand-text">
-        <span class="brand-tagline">Fashion Atrract's</span>
-      </div>
-    </a>
+        <img src="logo.png" alt="Store Logo" class="logo-img">
+        <div class="brand-text">
+          <span class="brand-tagline">Fashion Attract's</span>
+        </div>
+      </a>
       <div class="header-actions">
         <a href="cart.html" class="cart-link">🛒 Cart</a>
         <a href="login.html">Login</a>
@@ -31,32 +30,18 @@
     </nav>
   </header>
 
-<h2>My Account</h2>
-<a href="my-orders.html">My Orders</a>
+  <main>
+    <div class="container">
+      <h2>My Account</h2>
+      <div class="card">
+        <a href="my-orders.html">My Orders</a>
+        <br><br>
+        <button onclick="logout()" class="secondary">Logout</button>
+      </div>
+    </div>
+  </main>
 
-<script type="module">
-import { auth } from "../js/firebase.js";
-auth.onAuthStateChanged(u=>{
-  if(!u) location.href="login.html";
-});
-</script>
-<script type="module">
-import { auth } from "../js/firebase.js";
-
-auth.onAuthStateChanged(user => {
-  if (!user) {
-    location.href = "login.html";
-    return;
-  }
-
-  if (!user.emailVerified) {
-    alert("Please verify your email first.");
-    location.href = "login.html";
-  }
-});
-</script>
-
-<!-- Footer -->
+  <!-- Footer -->
   <footer class="footer">
     <div class="footer-top">
       <div class="footer-logo">
@@ -100,11 +85,11 @@ auth.onAuthStateChanged(user => {
             <a href="https://facebook.com" target="_blank">📘 Facebook</a>
             <a href="https://instagram.com" target="_blank">📷 Instagram</a>
             <a href="https://twitter.com" target="_blank">𝕏 Twitter</a>
-            <a href="https://wa.me/1234567890" target="_blank">💬 WhatsApp</a>
+            <a href="https://wa.me/919944499333" target="_blank">💬 WhatsApp</a>
           </div>
           <div class="contact-info">
-            <p><strong>Email:</strong> <a href="mailto:support@example.com">support@example.com</a></p>
-            <p><strong>Phone:</strong> <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+            <p><strong>Email:</strong> <a href="mailto:vogantfashions@gmail.com">vogantfashions@gmail.com</a></p>
+            <p><strong>Phone:</strong> <a href="tel:+919944499333">+91 99444 99333</a></p>
           </div>
         </div>
       </div>
@@ -130,11 +115,30 @@ auth.onAuthStateChanged(user => {
     </div>
     <div class="footer-divider"></div>
     <div class="footer-bottom">
-      <p>&copy; 2026 Store Name. All rights reserved.</p>
+      <p>&copy; 2026 Vogant Fashions. All rights reserved.</p>
     </div>
   </footer>
 
-  <script type="module" src="../js/products.js"></script>
-  <script src="../js/cart.js"></script>
+  <script type="module">
+    import { auth } from "../js/firebase.js";
+    
+    window.logout = function() {
+      auth.signOut().then(() => {
+        location.href = "login.html";
+      });
+    };
+
+    auth.onAuthStateChanged(user => {
+      if (!user) {
+        location.href = "login.html";
+        return;
+      }
+      if (!user.emailVerified) {
+        alert("Please verify your email first.");
+        location.href = "login.html";
+      }
+    });
+  </script>
 </body>
-</html> 
+</html>
+
