--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -8,50 +8,71 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script type="module" src="../admin-js/dashboard-summary.js"></script>
   <style>
-    :root {
-      --accent: #8b1d1d;
-      --accent-light: #a82a2a;
-      --bg-page: #f3f4f6;
-      --card-bg: #ffffff;
-      --text-primary: #111827;
-      --text-secondary: #6b7280;
-      --border-color: #e5e7eb;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, sans-serif;
-      background: var(--bg-page);
-      color: var(--text-primary);
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-    }
-
-    /* Navigation */
-    nav {
+    /* Admin Header with Logo */
+    .admin-header {
       display: flex;
       align-items: center;
-      gap: 12px;
-      padding: 12px 18px;
+      justify-content: space-between;
+      padding: 12px 24px;
       background: #fff;
       border-bottom: 1px solid #eee;
       box-shadow: 0 2px 4px rgba(0,0,0,0.04);
     }
 
-    nav a {
-      color: #111827;
-      font-weight: 600;
-      font-size: 14px;
-      transition: color 0.2s;
+    .admin-logo {
+      display: flex;
+      align-items: center;
+      gap: 12px;
       text-decoration: none;
     }
 
-    nav a:hover {
+    .admin-logo-img {
+      height: 45px;
+      width: auto;
+    }
+
+    .admin-brand {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .admin-brand-name {
+      font-family: 'Playfair Display', Georgia, serif;
+      font-size: 22px;
+      font-weight: 900;
       color: var(--accent);
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      line-height: 1.1;
+    }
+
+    .admin-brand-tagline {
+      font-size: 10px;
+      color: #6b7280;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      font-weight: 500;
+    }
+
+    .admin-nav-links {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .admin-nav-links a {
+      color: #111827;
+      font-weight: 600;
+      font-size: 13px;
+      transition: color 0.2s;
+      text-decoration: none;
+      padding: 6px 10px;
+      border-radius: 6px;
+    }
+
+    .admin-nav-links a:hover {
+      color: var(--accent);
+      background: rgba(139, 29, 29, 0.08);
     }
 
     /* Page Header */
@@ -60,6 +81,18 @@
       color: white;
       padding: 24px 32px;
       margin-bottom: 24px;
+      animation: slideDown 0.5s ease-out;
+    }
+
+    @keyframes slideDown {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .page-header h2 {
@@ -73,19 +106,142 @@
       opacity: 0.9;
       font-size: 14px;
     }
+
+    /* Animated Cards */
+    .dashboard-cards {
+      animation: fadeInUp 0.6s ease-out;
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .card {
+      animation: cardPop 0.4s ease-out backwards;
+    }
+
+    .card:nth-child(1) { animation-delay: 0.1s; }
+    .card:nth-child(2) { animation-delay: 0.2s; }
+    .card:nth-child(3) { animation-delay: 0.3s; }
+    .card:nth-child(4) { animation-delay: 0.4s; }
+    .card:nth-child(5) { animation-delay: 0.5s; }
+
+    @keyframes cardPop {
+      from {
+        opacity: 0;
+        transform: scale(0.9);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.15);
+    }
+
+    /* Collection Stats Animation */
+    .collection-stats {
+      margin-top: 30px;
+      padding: 20px;
+      animation: fadeInUp 0.6s ease-out 0.3s backwards;
+    }
+
+    .collection-card {
+      animation: cardPop 0.4s ease-out backwards;
+    }
+
+    .collection-card:nth-child(1) { animation-delay: 0.2s; }
+    .collection-card:nth-child(2) { animation-delay: 0.3s; }
+    .collection-card:nth-child(3) { animation-delay: 0.4s; }
+    .collection-card:nth-child(4) { animation-delay: 0.5s; }
+    .collection-card:nth-child(5) { animation-delay: 0.6s; }
+    .collection-card:nth-child(6) { animation-delay: 0.7s; }
+
+    .collection-stats h3 {
+      margin-bottom: 20px;
+      color: var(--accent);
+    }
+
+    .collection-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 16px;
+    }
+
+    .collection-card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 16px;
+      box-shadow: var(--shadow);
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .collection-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.12);
+    }
+
+    .collection-icon {
+      font-size: 32px;
+      background: var(--bg);
+      padding: 10px;
+      border-radius: 8px;
+    }
+
+    .collection-info h4 {
+      margin: 0 0 4px 0;
+      font-size: 14px;
+      color: #374151;
+    }
+
+    .collection-count {
+      margin: 0;
+      font-size: 18px;
+      font-weight: 700;
+      color: var(--accent);
+    }
+
+    .collection-stock {
+      margin: 4px 0 0 0;
+      font-size: 12px;
+      color: var(--muted);
+    }
   </style>
 </head>
 <body>
-  <nav>
-    <a href="dashboard.html">Home</a> |
-    <a href="products.html">Products</a> |
-    <a href="orders.html">Orders</a> |
-    <a href="analytics.html">Analytics</a> |
-    <a href="manage-admins.html">Manage Admins</a> |
-    <a href="customers.html">Customers</a> |
-    <a href="customer-orders.html">Customer Orders</a> |
-    <a href="/public/index.html" id="logout">Logout</a>
-  </nav>
+  <!-- Admin Header with Logo -->
+  <header class="admin-header">
+    <a href="dashboard.html" class="admin-logo">
+      <img src="../public/logo.png" alt="VOGANT Logo" class="admin-logo-img">
+      <div class="admin-brand">
+        <span class="admin-brand-name">VOGANT</span>
+        <span class="admin-brand-tagline">Fashion Attract's</span>
+      </div>
+    </a>
+    <nav class="admin-nav-links">
+      <a href="dashboard.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="orders.html">Orders</a>
+      <a href="analytics.html">Analytics</a>
+      <a href="manage-admins.html">Manage Admins</a>
+      <a href="customers.html">Customers</a>
+      <a href="customer-orders.html">Customer Orders</a>
+      <a href="/public/index.html" id="logout" style="color: #dc2626;">Logout</a>
+    </nav>
+  </header>
 
   <!-- Page Header -->
   <div class="page-header">
